Added some sounds.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/timer.css" />
   </head>
   <body>
+    <audio src="sounds/beepthree.wav" id="sound-beep-three"></audio>
+    <audio src="sounds/boxingbell.wav" id="sound-boxing-bell"></audio>
     <div class="schedule-create">
       <textarea id="schedule-create-input" cols="50" rows="10">
 1) Bench 2:00 2:00 2:00
